# micro.libmath

./: CMakeLists.txt  LICENSE  README.md  matrix.hh  matrix2x2.hh  matrix2x2_sse.inl  matrix2x3.hh  matrix2x4.hh  matrix2xN_transform.hh  matrix3x2.hh  matrix3x3.hh  matrix3x3_arm.inl  matrix3x3_sse.inl  matrix3x4.hh  matrix3xN_transform.hh  matrix4x2.hh  matrix4x3.hh  matrix4x4.hh  matrix4x4_sse.inl  matrix4xN_transform.hh  vector.hh  vector2.hh  vector2_sse.inl  vector3.hh  vector3_sse.inl  vector4.hh  vector4_sse.inl
.github/workflows/: amd64.yml  arm64.yml  cmake.yml
include/libmath/: matrix.hh  matrix2x2.hh  matrix2x4.hh  matrix3x2.hh  matrix3x3.hh  matrix3x4.hh  matrix4x2.hh  matrix4x3.hh  matrix4x4.hh  matrix4x4_arm.inl  vector.hh  vector2.hh  vector3.hh  vector4.hh
include/libmath/simd/: arm.hh  avx.hh  sse.hh
test/: matrix2.cc  matrix2xN.cc  matrix3.cc  matrix3xN.cc  matrix4.cc  matrix4xN.cc  vector2.cc  vector3.cc  vector4.cc
